Additional Unit tests.